--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>release 3.5.1 January 5, 2022</p>
+            <p>latest release 3.5.1 January 5, 2022</p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
